// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useToolbarOptions() should return correct value for 0 indicators total 1`] = `
Object {
  "additionalControls": Object {
    "left": Object {
      "append": <IndicatorsFieldBrowser
        browserFields={Object {}}
        columnIds={Array []}
        onResetColumns={[Function]}
        onToggleColumn={[Function]}
      />,
      "prepend": <EuiText
        size="xs"
        style={
          Object {
            "display": "inline",
          }
        }
      >
        <React.Fragment>
          -
        </React.Fragment>
      </EuiText>,
    },
    "right": <EuiButtonIcon
      data-test-subj="tiIndicatorsGridInspect"
      iconType="inspect"
      onClick={[Function]}
      title="Inspect"
    />,
  },
  "showDisplaySelector": false,
  "showFullScreenSelector": true,
}
`;

exports[`useToolbarOptions() should return correct value for 25 indicators total 1`] = `
Object {
  "additionalControls": Object {
    "left": Object {
      "append": <IndicatorsFieldBrowser
        browserFields={Object {}}
        columnIds={Array []}
        onResetColumns={[Function]}
        onToggleColumn={[Function]}
      />,
      "prepend": <EuiText
        size="xs"
        style={
          Object {
            "display": "inline",
          }
        }
      >
        <React.Fragment>
          Showing 
          1
          -
          25
           of
           
          25
           indicators
        </React.Fragment>
      </EuiText>,
    },
    "right": <EuiButtonIcon
      data-test-subj="tiIndicatorsGridInspect"
      iconType="inspect"
      onClick={[Function]}
      title="Inspect"
    />,
  },
  "showDisplaySelector": false,
  "showFullScreenSelector": true,
}
`;

exports[`useToolbarOptions() should return correct value for 50 indicators total 1`] = `
Object {
  "additionalControls": Object {
    "left": Object {
      "append": <IndicatorsFieldBrowser
        browserFields={Object {}}
        columnIds={Array []}
        onResetColumns={[Function]}
        onToggleColumn={[Function]}
      />,
      "prepend": <EuiText
        size="xs"
        style={
          Object {
            "display": "inline",
          }
        }
      >
        <React.Fragment>
          Showing 
          26
          -
          50
           of
           
          50
           indicators
        </React.Fragment>
      </EuiText>,
    },
    "right": <EuiButtonIcon
      data-test-subj="tiIndicatorsGridInspect"
      iconType="inspect"
      onClick={[Function]}
      title="Inspect"
    />,
  },
  "showDisplaySelector": false,
  "showFullScreenSelector": true,
}
`;
